# TagForge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TagForge_design.md  environment.yml  pyproject.toml  setup.py
configs/: config.example.yaml
docs/: commands.md  journal.md
examples/: CELL_WL.txt  FB_WL.txt  FB_info.tsv  generate_example_data.py  tutorial.md
src/tagforge/: __init__.py  barcode_correct.py  cli.py  config.py  downsample.py  external_tools.py  extract.py  fastq.py  io_utils.py  logging_utils.py  matrix.py  pi_seq.py  pipeline.py  quick_test.py  reports.py  simple_yaml.py  slurm.py  umi_correct.py  xlsx.py
tests/: test_core.py  test_integration.py
