[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagforge"
version = "0.1.6"
description = "Streaming barcode and UMI processing for paired-end FASTQ libraries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "TagForge contributors"}]
keywords = ["FASTQ", "barcode", "UMI", "sequencing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "cutadapt>=4.6",
  "umi-tools>=1.1.5",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
tagforge = "tagforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
